--- a/main.css
+++ b/main.css
@@ -399,9 +399,11 @@ legend {
 textarea {
   overflow: auto;
 }
-html {
-<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
+html { 
       box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
 }
 body {
   width: 360px;
@@ -490,8 +492,16 @@ border: 1px solid #acd373;
     background-color: #f7f7f7;
 }
 /* service section heading*/
+
 .heading {
 text-align: center;
+}
+.heading h1 {
+font:  20px 'Source Sans Pro', sans-serif;}
+.heading span {
+color: #acd373;
+    font-size: 20px;
+    padding-left: 3px;
 }
 
 .services_section h3 {
@@ -510,9 +520,12 @@ list-style-type: none;
     margin: 0 auto; 
     padding: 0;
 }
+.services {
+margin-top: 15px;
+}
 .service-icon h2 {
     font-family: 'Source Sans Pro' sans-serif;
-    font-size: 14px;
+    font-size: 12px;
     text-transform: uppercase;
     color: #acd373;
 }
@@ -529,9 +542,24 @@ list-style-type: none;
     vertical-align: top;
     margin-left: 28px;
 }
+.service-infos {
+ width: 204px;
+    display: inline-block;
+    vertical-align: top;
+    margin-left: 20px;
+}
+.service-infos p {
+    position: relative;
+    bottom: 7px;
+    height: 29px;
+    font-size: 11px;
+    font-family: 'Source Sans Pro', sans-serif;
+}
 .service-info p {
+       position: relative;
+    bottom: 7px;
 height: 29px;
-    font-size: 12px;
+    font-size: 11px;
     font-family: 'Source Sans Pro', sans-serif;
 }
 
@@ -550,8 +578,8 @@ border: 1px solid #acd373;
         margin-left: 40px;
 }
 .button1 {
-margin-top: 10px;
-    padding-left: 83px;
+margin-top: 30px;
+    padding-left: 89px;
 }
  /* Begin meet the team section*/
 .meet {
@@ -573,17 +601,22 @@ color: #f7f7f7;
 }
 .meetteam > p {
 font-family: DroidSerif;
-   font-size: 12px;
+   font-size: 14px;
     text-align: center;
 }
+.container {
+position: relative;
+    top: 20px;
+}
 .container .arrow-left {
-    position: relative;
-    top: 120px;
+    position: absolute;
+   right: 83%;
+    top: 30%;
 }
 .container .arrow-right {
-position: relative;
-    left: 310px;
-    top: 120px;
+position: absolute;
+    left: 83%;
+    top: 30%;
 }
 .teammates {
     position: relative;
@@ -600,19 +633,24 @@ left: 58px;
 } */
 .john-doe {
 font-family: 'Source Sans Pro', sans-serif;
+    font-size: 15px;
     color: #acd373;
-    padding-left: 55px;
+    padding-left: 59px;
+    position: relative;
+    top: 10px;
 }
 .job-role {
     padding-top: 45px;
   margin: -20px;
-    padding-left: 30px;
+    padding-left: 20px;
 }
 .job-title {
+      position: relative;
+    bottom: 5px;
 font-family: DroidSerif;
     color: #787878;
     font-size: 12px;
-    padding-left: 50px;
+    padding-left: 54px;
 }
 
 .ceo {
@@ -622,7 +660,7 @@ position: absolute;
 border: 5px solid #acd373;
     border-radius: 50%;
 }
-.social-media {
+.social-media { 
     margin-top: 30px;
     height: 52px;
     width: 200px;
@@ -649,7 +687,7 @@ padding-top: 14px;
     font-family: 'Source Sans Pro', sans-serif;
     color: #f7f7f7;
     display: inline;
-    margin-left: 10px;
+    margin-left: 16px;
 }
 .footer a {
 border: 1px solid #f7f7f7;
@@ -657,9 +695,10 @@ border: 1px solid #f7f7f7;
     color: #f7f7f7;
     font-family: DroidSerif;
     text-decoration: none;
-      padding: 7px 5px 5px 5px;
-        margin-left: 40px;
+      padding: 9px 5px 5px 5px;
+        margin-left: 30px;
 }
+
 /* end meet team footer section*/
 /* Begin OUR WORKS section*/
 .our-work {
@@ -733,9 +772,13 @@ text-align: center;
     background-color: #ebebeb;
 }
 .logos img {
-padding-top: 10px;
+padding-top: 20px;
     padding-left: 25px;
     padding-bottom: 10px;
+}
+.forest {
+position: relative;
+    top: 7px;
 }
 /* Need fix logo positioning, looks crooked*/
  
@@ -749,7 +792,8 @@ padding-top: 10px;
     background-size: cover;
 }
 .quote-box {
-border: 2px solid #f7f7f7;
+    position: relative;
+border: 1px solid #f7f7f7;
     width: 298px;
     height: 85px;
     margin: 0 auto;
@@ -767,18 +811,19 @@ position: relative;
         left: 250px;
 }
 .ribbon {
-position: relative;
-right: 28px;
-bottom: 10px;
+position: absolute;
+    left: 0;
+    top: 85px;
 }
 .circlejohn {
     border-radius: 40px;
 }
 
-.client-quote p {
+.client-quote a {
 color: rgba(247, 247, 247, 0.85);
     font-size: 14.8px;
     font-style: italic;
+    text-decoration: none;
 
 }
 .client-quote h3 {
@@ -842,12 +887,13 @@ padding-top: 80px;
 .blog {
 height: 665px;
     background-color: #f7f7f7;
-    padding-top: 30px;   
+    padding-top: 20px;   
 }
 .blog-heading {
 text-align: center;
     width: 350px;
     margin: 0 auto;
+    position: relative;
 }
 .blog-heading h2 {
 font-family: 'Source Sans Pro',sans-serif;
@@ -857,23 +903,26 @@ font-family: 'Source Sans Pro',sans-serif;
 }
 /* BLog needs work, nothing is lining up correctly*/
 .blog-post {
-display: inline-block;
+    display: inline-block;
     width: 160px;
-    height: 168px;
     margin-left: 12px;
     background-color: #ebebeb;
+    margin-top: 16px; 
+    vertical-align: top;
     position: relative;
-    margin-top: 12px;
 }
-
+.blog-post > img {
+    height: 101px;
+    width: 159px;
+}
 .green_circle {
     width: 35px;
     height: 35px;
     background-color: #acd373;
     border: 4px solid #ebebeb;
     border-radius: 100%;
-    position: relative;
-    top: -29px;
+    position: absolute;
+    top: 85px;
     left: 62px;
 }
 
@@ -890,47 +939,64 @@ color: #454545;
     font:  12px 'Source Sans Pro', sans-serif;
     text-align: center;
     position: relative;
-    top: -30px;
+    height: 70px;
+    
+}
+.blog-title p {
+  position: absolute;
+  top: 50%;
+    transform: translateY(-50%);
+    margin: 0;
+    text-align: center;
+    padding: 7px;
+    width: 100%;
 }
 
 .blog-post a {
     display: block;
-    height: 20px;
+    height: 30px;
     background-color: #acd373;
     text-align: center;
     color: #f2f5f0;
     font-family: DroidSerif;
     font-style: italic;
     font-size: 8.33px;
-    padding-top: 9px;
+    line-height: 30px;
     text-decoration: none;
     position: relative;
-    top: inherit;
+
 
 }
 
 .newsletter {
     height: 50px;
 background-color: #acd373;
-  padding-top: 24px;
+  padding-top: 12px;
 }
 
 /* how to get the span iniline and wrapped with h2*/
 
 .newsletter > h2 {
-font-size: 12px;
+font-size: 11px;
  margin-left: 5px;
     color: #f7f7f7;
     display: inline;
     
 }
-.email input {  
+.email input { 
+    height: 19px;
   margin-left: 5px;
 display: inline;
     font-family: 'Source Sans Pro';
    width: 109px;
     border: 2px solid #f7f7f7;
     background-color: #acd373;
+}
+.newsletter img {
+position: relative;
+    right: 10px;
+    top: 9px;
+    
 }
 .map {
 height: 129px;
@@ -951,18 +1017,25 @@ color: #f7f7f7;
 text-align: center;
 }
 /* Form section*/
-.form {
-padding-left: 20px;
+.form, label {
+padding-left: 15px;
+    padding-top: 10px; 
     display: block;
+}
+label {
+color: #f7f7f7;
+padding-bottom: 3px;
 }
 .name-title {
 color: whitesmoke;
     font: italic 20.7px / 24px DroidSerif;
+    margin-left: 15px;
 }
 .email-info {
 color: whitesmoke;
     font: italic 20.7px / 24px DroidSerif;
 }
+
 input,.email-info, .name-title {
     background-color: #9abd67;
     font-style: italic;
@@ -970,24 +1043,19 @@ input,.email-info, .name-title {
     width: 301px;
     border: 0;  
 }
-.form h1 {
-font-family: 'Source Sans Pro', sans-serif;
-font-size: 20px;
-    color: #f7f7f7;
-  
-}
 textarea {
     background-color:#9abd67;
+    margin-top: 3px;
 }
 
 input::-webkit-input-placeholder {
    color: #f7f7f7;
-    font-size: 14px;
+    font-size: 12px;
 }
 .message-form{
      width: 301px;
 color: #f7f7f7;
-    font: italic 14px / 22px DroidSerif;
+    font: italic 12px / 22px DroidSerif;
 border: 0;
 }
 
@@ -995,7 +1063,7 @@ border: 0;
 .sign-up-button {
     width: 200px;
 vertical-align: top;
-    margin-top: 30px;
+    margin-top: 50px;
 }
 
 .submit-button {
