Still cleaning up the CSS

--- a/main.css
+++ b/main.css
@@ -1,431 +1,126 @@
-/*! normalize.css v3.0.2 | MIT License | git.io/normalize */
-
-/**
- * 1. Set default font family to sans-serif.
- * 2. Prevent iOS text size adjust after orientation change, without disabling
- *    user zoom.
- */
+/*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
+img,legend{border:0}legend,td,th{padding:0}html{font-family:sans-serif;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,details,figcaption,figure,footer,header,hgroup,main,menu,nav,section,summary{display:block}audio,canvas,progress,video{display:inline-block;vertical-align:baseline}audio:not([controls]){display:none;height:0}[hidden],template{display:none}a{background-color:transparent}a:active,a:hover{outline:0}abbr[title]{border-bottom:1px dotted}b,optgroup,strong{font-weight:700}dfn{font-style:italic}h1{font-size:2em;margin:.67em 0}mark{background:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sup{top:-.5em}sub{bottom:-.25em}svg:not(:root){overflow:hidden}figure{margin:1em 40px}hr{box-sizing:content-box;height:0}pre,textarea{overflow:auto}code,kbd,pre,samp{font-family:monospace,monospace;font-size:1em}button,input,optgroup,select,textarea{color:inherit;font:inherit;margin:0}button{overflow:visible}button,select{text-transform:none}button,html input[type=button],input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer}button[disabled],html input[disabled]{cursor:default}button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0}input{line-height:normal}input[type=checkbox],input[type=radio]{box-sizing:border-box;padding:0}input[type=number]::-webkit-inner-spin-button,input[type=number]::-webkit-outer-spin-button{height:auto}input[type=search]{-webkit-appearance:textfield;box-sizing:content-box}input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-search-decoration{-webkit-appearance:none}fieldset{border:1px solid silver;margin:0 2px;padding:.35em .625em .75em}table{border-collapse:collapse;border-spacing:0}
 
 html {
-  font-family: sans-serif; /* 1 */
-  -ms-text-size-adjust: 100%; /* 2 */
-  -webkit-text-size-adjust: 100%; /* 2 */
+  box-sizing: border-box
 }
 
-/**
- * Remove default margin.
- */
+*,:before,:after {
+  box-sizing: inherit
+}
+
+/* -----------------
+SIXTEEN BASE STYLING
+-----------------  */
 
 body {
   margin: 0;
+  font-family: 'Source Sans Pro',sans-serif;
+  background-color: #f7f7f7;
+  font-size: 13px
 }
-
-/* HTML5 display definitions
-   ========================================================================== */
-
-/**
- * Correct `block` display not defined for any HTML5 element in IE 8/9.
- * Correct `block` display not defined for `details` or `summary` in IE 10/11
- * and Firefox.
- * Correct `block` display not defined for `main` in IE 11.
- */
-
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-main,
-menu,
-nav,
-section,
-summary {
-  display: block;
+*, *:before, *:after {
+  box-sizing: inherit;
 }
-
-/**
- * 1. Correct `inline-block` display not defined in IE 8/9.
- * 2. Normalize vertical alignment of `progress` in Chrome, Firefox, and Opera.
- */
-
-audio,
-canvas,
-progress,
-video {
-  display: inline-block; /* 1 */
-  vertical-align: baseline; /* 2 */
+body, html {
+height: 100%;
+  margin: 0;  
 }
-
-/**
- * Prevent modern browsers from displaying `audio` without controls.
- * Remove excess height in iOS 5 devices.
- */
-
-audio:not([controls]) {
-  display: none;
-  height: 0;
+section {
+padding: 30px;
 }
-
-/**
- * Address `[hidden]` styling not present in IE 8/9/10.
- * Hide the `template` element in IE 8/9/11, Safari, and Firefox < 22.
- */
-
-[hidden],
-template {
-  display: none;
-}
-
-/* Links
-   ========================================================================== */
-
-/**
- * Remove the gray background color from active links in IE 10.
- */
-
-a {
-  background-color: transparent;
-}
-
-/**
- * Improve readability when focused and also mouse hovered in all browsers.
- */
-
-a:active,
-a:hover {
-  outline: 0;
-}
-
-/* Text-level semantics
-   ========================================================================== */
-
-/**
- * Address styling not present in IE 8/9/10/11, Safari, and Chrome.
- */
-
-abbr[title] {
-  border-bottom: 1px dotted;
-}
-
-/**
- * Address style set to `bolder` in Firefox 4+, Safari, and Chrome.
- */
-
-b,
-strong {
-  font-weight: bold;
-}
-
-/**
- * Address styling not present in Safari and Chrome.
- */
-
-dfn {
-  font-style: italic;
-}
-
-/**
- * Address variable `h1` font-size and margin within `section` and `article`
- * contexts in Firefox 4+, Safari, and Chrome.
- */
 
 h1 {
-  font-size: 2em;
-  margin: 0.67em 0;
+  font-size: 1.538em;
+  font-weight: 700;
+  text-transform: uppercase
 }
 
-/**
- * Address styling not present in IE 8/9.
- */
-
-mark {
-  background: #ff0;
-  color: #000;
+h2 {
+  color: #454545;
+  font-size: 1.385em;
+  font-weight: 600;
+  text-transform: uppercase;
+  text-align: center;
+  margin: 14px 0 11px
 }
 
-/**
- * Address inconsistent and variable font size in all browsers.
- */
-
-small {
-  font-size: 80%;
+h2 em {
+  font-style: normal;
+  color: #acd373
 }
 
-/**
- * Prevent `sub` and `sup` affecting `line-height` in all browsers.
- */
-
-sub,
-sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
+h3 {
+  color: #acd373;
+  font-size: 1.077em;
+  text-transform: uppercase;
+  margin: 10px 0
 }
 
-sup {
-  top: -0.5em;
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0
 }
 
-sub {
-  bottom: -0.25em;
+.learnmore {
+  display: inline-block;
+  margin: 17px 0;
+  padding: 11px 15px;
+  color: #acd473;
+  text-decoration: none;
+  border: 1px solid #acd473;
+  font-family: 'Droid Serif',serif;
+  font-style: italic;
+  font-size: 11px
+}
+/* --------------
+   HEADER SECTION
+-------------- */
+header {
+  background-color: #acd373;
+  height: 40px;
+  position: fixed;
+  width: 100%;
+  z-index: 10;
+  box-shadow: 0 5px 5px rgba(0,0,0,0.1);
+  transition: all .5s;
+}
+nav {
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-color: #89a85c;
+  background-image: url(images/btn-tg-nav.png);
+  background-repeat: no-repeat;
+  background-position: center
+}
+    
+}
+.site-links a {
+    color: whitesmoke;
+    text-decoration: none;
+    display: inline-block;
 }
 
-/* Embedded content
-   ========================================================================== */
-
-/**
- * Remove border when inside `a` element in IE 8/9/10.
- */
-
-img {
-  border: 0;
+.logo {
+    display: inline-block;
+    margin: 4px 0 0 30px;
 }
-
-/**
- * Correct overflow not hidden in IE 9/10/11.
- */
-
-svg:not(:root) {
-  overflow: hidden;
-}
-
-/* Grouping content
-   ========================================================================== */
-
-/**
- * Address margin not present in IE 8/9 and Safari.
- */
-
-figure {
-  margin: 1em 40px;
-}
-
-/**
- * Address differences between Firefox and other browsers.
- */
-
-hr {
-  -moz-box-sizing: content-box;
-  box-sizing: content-box;
-  height: 0;
-}
-
-/**
- * Contain overflow in all browsers.
- */
-
-pre {
-  overflow: auto;
-}
-
-/**
- * Address odd `em`-unit font size rendering in all browsers.
- */
-
-code,
-kbd,
-pre,
-samp {
-  font-family: monospace, monospace;
-  font-size: 1em;
-}
-
-/* Forms
-   ========================================================================== */
-
-/**
- * Known limitation: by default, Chrome and Safari on OS X allow very limited
- * styling of `select`, unless a `border` property is set.
- */
-
-/**
- * 1. Correct color not being inherited.
- *    Known issue: affects color of disabled elements.
- * 2. Correct font properties not being inherited.
- * 3. Address margins set differently in Firefox 4+, Safari, and Chrome.
- */
-
-button,
-input,
-optgroup,
-select,
-textarea {
-  color: inherit; /* 1 */
-  font: inherit; /* 2 */
-  margin: 0; /* 3 */
-}
-
-/**
- * Address `overflow` set to `hidden` in IE 8/9/10/11.
- */
-
-button {
-  overflow: visible;
-}
-
-/**
- * Address inconsistent `text-transform` inheritance for `button` and `select`.
- * All other form control elements do not inherit `text-transform` values.
- * Correct `button` style inheritance in Firefox, IE 8/9/10/11, and Opera.
- * Correct `select` style inheritance in Firefox.
- */
-
-button,
-select {
-  text-transform: none;
-}
-
-/**
- * 1. Avoid the WebKit bug in Android 4.0.* where (2) destroys native `audio`
- *    and `video` controls.
- * 2. Correct inability to style clickable `input` types in iOS.
- * 3. Improve usability and consistency of cursor style between image-type
- *    `input` and others.
- */
-
-button,
-html input[type="button"], /* 1 */
-input[type="reset"],
-input[type="submit"] {
-  -webkit-appearance: button; /* 2 */
-  cursor: pointer; /* 3 */
-}
-
-/**
- * Re-set default cursor for disabled elements.
- */
-
-button[disabled],
-html input[disabled] {
-  cursor: default;
-}
-
-/**
- * Remove inner padding and border in Firefox 4+.
- */
-
-button::-moz-focus-inner,
-input::-moz-focus-inner {
-  border: 0;
-  padding: 0;
-}
-
-/**
- * Address Firefox 4+ setting `line-height` on `input` using `!important` in
- * the UA stylesheet.
- */
-
-input {
-  line-height: normal;
-}
-
-/**
- * It's recommended that you don't attempt to style these elements.
- * Firefox's implementation doesn't respect box-sizing, padding, or width.
- *
- * 1. Address box sizing set to `content-box` in IE 8/9/10.
- * 2. Remove excess padding in IE 8/9/10.
- */
-
-input[type="checkbox"],
-input[type="radio"] {
-  box-sizing: border-box; /* 1 */
-  padding: 0; /* 2 */
-}
-
-/**
- * Fix the cursor style for Chrome's increment/decrement buttons. For certain
- * `font-size` values of the `input`, it causes the cursor style of the
- * decrement button to change from `default` to `text`.
- */
-
-input[type="number"]::-webkit-inner-spin-button,
-input[type="number"]::-webkit-outer-spin-button {
-  height: auto;
-}
-
-/**
- * 1. Address `appearance` set to `searchfield` in Safari and Chrome.
- * 2. Address `box-sizing` set to `border-box` in Safari and Chrome
- *    (include `-moz` to future-proof).
- */
-
-input[type="search"] {
-  -webkit-appearance: textfield; /* 1 */
-  -moz-box-sizing: content-box;
-  -webkit-box-sizing: content-box; /* 2 */
-  box-sizing: content-box;
-}
-
-/**
- * Remove inner padding and search cancel button in Safari and Chrome on OS X.
- * Safari (but not Chrome) clips the cancel button when the search input has
- * padding (and `textfield` appearance).
- */
-
-input[type="search"]::-webkit-search-cancel-button,
-input[type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
-
-/**
- * Define consistent border, margin, and padding.
- */
-
-fieldset {
-  border: 1px solid #c0c0c0;
-  margin: 0 2px;
-  padding: 0.35em 0.625em 0.75em;
-}
-
-/**
- * 1. Correct `color` not being inherited in IE 8/9/10/11.
- * 2. Remove padding so people aren't caught out if they zero out fieldsets.
- */
-
-legend {
-  border: 0; /* 1 */
-  padding: 0; /* 2 */
-}
-
-/**
- * Remove default vertical scrollbar in IE 8/9/10/11.
- */
-
-textarea {
-  overflow: auto;
-}
-html { 
-      box-sizing: border-box;
-}
-*, *:before, *:after {
-  box-sizing: inherit;
-}
-body {
-  width: 360px;
-    font-family: 'Source Sans Pro', sans-serif;
-}
-*, *:before, *:after {
-  box-sizing: inherit;
-}
-
-header{
-    background: #acd373 url(images/toggle.png) no-repeat right;
-}
-header .logo {
-    padding-left: 10px;
-    padding-top: 5px;
-}
+/* --------------
+   GRETTING SECTION
+-------------- */
 .greeting {
   height: 350px;
    background:#9abd67 url(images/silhuet.png) no-repeat bottom;
+    background-size: auto 30%;
   position: relative;
   color: #fff;
   text-align: center;
+    display: flex;
+    flex-direction: column;
 }
 
 .greeting h1{
@@ -437,19 +132,17 @@ span {
 font: italic 13px Droidserif;
 }
 .arrow {
-padding-top:50px;
+    display: block;
+margin: 50px auto 0;
 }
 div.sixteen {
   padding-right: 25px;
   padding-left: 25px;
     padding-top: 95px;
 }
-/* contains the heading, span and image*/
-
-.sixteen img {
-  padding-top: 20px; 
-}
-/* the arrow position*/
+/* ---------------------
+   ABOUT SECTION
+-------------------- */
 
 .who-we-are {
     height: 500px;
@@ -457,36 +150,23 @@ div.sixteen {
 }
 /* fonts are incorrect*/
 .iphone {
-padding: 35px 140px ;
+    display: block;
+ margin: 13px auto 36px;
 }
 
-#title {
-padding-left: 2px;
-    padding-top: 7px;
-    font-size: 18px;
-    font-family: 'Source Sans Pro', sans-serif;
-    position: absolute;
+.who-we-are h2 {
+  background: url(images/manlogo.png) no-repeat;
+  height: 30px;
+  padding-left: 38px;
+  line-height: 30px;
+  text-transform: uppercase;
+  text-align: left
 }
-.who-bottom {
-padding-left: 22px;
-}
-.who-we-are p {
-font-size: 13px;
-    padding-right: 10px;
-    padding-bottom: 10px;
-    width: 320px;
-}
+
+
 /* need to move the 'learn more' link */
 
-.learnmore {
-border: 1px solid #acd373;
-    padding: 7px 5px 5px 5px;
-    font-size: 13px;
-    color: #acd373;
-    font-family: DroidSerif;
-    text-decoration: none;
-        
-}
+
 .video-learnmore {
     height: 261px;
     background-color: #f7f7f7;
@@ -494,24 +174,25 @@ border: 1px solid #acd373;
 /* service section heading*/
 
 .heading {
+    display: block;
+    height: 70px;
 text-align: center;
 }
-.heading h1 {
-font-size: 22px;
-}
-.heading span {
-color: #acd373;
-    font-size: 20px;
-    padding-left: 3px;
-}
 
-.services_section h3 {
-color: #454545;
-   font: 14px DroidSerif;
+.ellipsebar {
+display: block;
+    margin: 10px auto;
+    
 }
-
+.quote {
+  text-align: center;
+  font-family: 'Droid Serif',serif;
+  font-size: 12px;
+  margin: 11px 0
+}
 .services_section {
-    height: 500px;
+    display: inline-block;
+    height: 800px;
     background-color: #f7f7f7;
     padding-top: 1px;
 }
@@ -519,12 +200,12 @@ color: #454545;
 .services ul {
 list-style-type: none;
     margin: 0 auto; 
-    padding: 0;
+  display: inline-block;
 }
 
 .service-icon h2 {
     font-family: 'Source Sans Pro' sans-serif;
-    font-size: 12px;
+    font-size: 18px;
     text-transform: uppercase;
     color: #acd373;
 }
@@ -532,27 +213,28 @@ list-style-type: none;
 .service-img {
     display: inline-block;
     vertical-align: top;
-    margin-top: 9px;
-    margin-left: 13px;
+    margin-top: 20px;
+   
 }
 .service-info {
-    width: 214px;
     display: inline-block;
     vertical-align: top;
-    margin-left: 28px;
+    margin-left: 45px;
+
 }
 .service-infos {
- width: 214px;
+
     display: inline-block;
     vertical-align: top;
-    margin-left: 20px;
-    font-size: 13px;
+    margin-left: 60px;
+    font-size: 18px;
 }
 .service-info p {
        position: relative;
+    vertical-align: top; 
     bottom: 7px;
 height: 41px;
-    font-size: 13px;
+    font-size: 18px;
 }
 
 .service-icon {
@@ -560,20 +242,11 @@ padding-top: 15px;
     padding-left: 24px;
 } 
 
-.button1 a {
-border: 1px solid #acd373;
-    font-size: 13px;
-    color: #acd373;
-    font-family: DroidSerif;
-    text-decoration: none;
-      padding: 7px 5px 5px 5px;
-        margin-left: 40px;
-}
-.button1 {
-margin-top: 30px;
-    padding-left: 89px;
-}
- /* Begin meet the team section*/
+
+ /* ------------------- 
+    TEAM SECTION
+------------------- */
+ 
 .meet {
 height: 429px;
     background-color: #acd373;
@@ -715,14 +388,15 @@ font-size: 13px;
 .wrapper {
     margin-top: 20px;
 text-align: center;
+    display: flex;
 }
 .letoy-image {
-    position: relative;
-    left: 30px;
-    bottom: 70px;
-height: 80px;
-    width: 300px;
-    background-color: #ebebeb;
+  display: flex;
+  height: 80px;
+  background-color: #ebebeb;
+  text-align: center;
+  align-items: center
+}
 }
 .letoy {
     text-transform: uppercase;
@@ -769,7 +443,7 @@ position: relative;
 /* end logo section*/
 /* Begin Testimonial section*/
 .testimonials {
-    width: 360px;
+   
     height: 562px;
     background-image: url(images/background-02.jpg);
     padding-top: 20px;
@@ -850,7 +524,6 @@ color: #f7f7f7;
     font-family: 'Source Sans Pro', sans-serif;
     font-size: 13px;
     text-align: justify;
-    width: 296px;
     height: 59px;
 }
 .bottom-testimonial a {
@@ -869,9 +542,7 @@ padding-top: 80px;
 /* BLog beginning*/
 
 .blog {
-height: 665px;
-    background-color: #f7f7f7;
-    padding-top: 20px;   
+    padding-top: 30px 0 0;   
 }
 .blog-heading {
 text-align: center;
@@ -886,14 +557,17 @@ font-family: 'Source Sans Pro',sans-serif;
     text-transform: uppercase;
 }
 /* BLog needs work, nothing is lining up correctly*/
+@media screen and (min-width: 1000px;) 
+{ .blogpost {
+display: inline;
+}
+}
 .blog-post {
-    display: inline-block;
-    width: 160px;
-    margin-left: 12px;
-    background-color: #ebebeb;
-    margin-top: 16px; 
-    vertical-align: top;
-    position: relative;
+     width: 160px;
+  display: inline-block;
+  vertical-align: top;
+  margin: 0 0 16px 12px;
+  position: relative
 }
 .blog-post > img {
     height: 101px;
@@ -952,9 +626,11 @@ color: #454545;
 
 }
 
+
 .newsletter {
     height: 50px;
 background-color: #acd373;
+    text-align: center;
 }
 
 /* how to get the span iniline and wrapped with h2*/
@@ -974,6 +650,7 @@ display: inline;
    width: 129px;
     border: 2px solid #f7f7f7;
     background-color: #acd373;
+    
 }
 .newsletter img {
 position: relative;
@@ -1000,24 +677,11 @@ color: #f7f7f7;
 text-align: center;
 }
 /* Form section*/
-.form, label {
-padding-left: 15px;
-    padding-top: 10px; 
-    display: block;
-}
-label {
-color: #f7f7f7;
-padding-bottom: 3px;
-}
-.name-title {
-color: whitesmoke;
-    font: italic 12px / 24px DroidSerif;
-    margin-left: 15px;
-}
-.email-info {
-color: whitesmoke;
-    font: italic 12px / 24px DroidSerif;
-}
+
+/* ------------------- 
+  Miscelaneous
+------------------- */
+
 
 input,.email-info, .name-title {
     background-color: #9abd67;
@@ -1026,30 +690,71 @@ input,.email-info, .name-title {
     width: 301px;
     border: 0;  
 }
-textarea {
-    background-color:#9abd67;
-    margin-top: 3px;
-    color: #f7f7f7;
+/* ------------------- 
+  Miscelaneous
+------------------- */
+
+label {
+
+color: whitesmoke;
+}
+.contact-us {
+  max-width: 570px;
+  margin: 0 auto
 }
 
 input::-webkit-input-placeholder {
    color: #f7f7f7;
     font-size: 11px;
 }
-.message-form{
-     width: 301px;
-color: #f7f7f7;
-    font: italic 12px / 22px DroidSerif;
-border: 0;
+.contact-us input,.contact-us textarea {
+  height: 28px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  border: 1px solid transparent;
+  background-color: #9abd67;
+  padding: 5px
 }
 
+.contact-us input[type="submit"] {
+  height: 32px;
+  margin: 26px auto;
+  width: 73%
+}
+
+.contact-us textarea {
+  height: 85px;
+  resize: none
+}
 
 .sign-up-button {
     width: 200px;
 vertical-align: top;
     margin-top: 50px;
 }
+.contact-us label,.contact-us input,.contact-us textarea {
+  display: block;
+  width: 100%
+}
+.contact-us label {
+  font-size: 14px;
+  margin: 15px 0 10px
+}
 
+.contact-us input[type="submit"] {
+  height: 32px;
+  margin: 26px auto;
+  width: 73%
+}
+
+.contact-us textarea {
+  height: 85px;
+  resize: none
+}
+
+/* ------------------- 
+  PAGE FOOTER
+------------------- */
 .submit-button {
 text-align: center;
     padding-right: 15px;
@@ -1067,4 +772,16 @@ color: #f7f7f7;
     font-size: 12px;
     font-family: 'Source Sans Pro', sans-serif;
 }
+/*Media Queries*/
+@media screen and (min-width: 1000px;) 
+{
+   
+    .greeting {
+        background-size: 100%;
+    }
+}
 
+.contact-us {
+    max-width: 570px;
+    margin: 0 auto; 
+}
